initial version working

--- a/best-practices/tokens.mdx
+++ b/best-practices/tokens.mdx
@@ -30,12 +30,8 @@ If no `tokenStandard` is set, Phantom will fallback to categorizing tokens based
 
 Phantom will display all `Fungible` tokens in the Home tab. For more information on `Fungible` token best practices, please see:
 
-{% content-ref url="home-tab-fungibles.md" %}
-[home-tab-fungibles.md](home-tab-fungibles)
-{% endcontent-ref %}
+[Home Tab Fungibles](home-tab-fungibles.md)
 
 All other token standards (`FungibleAsset`, `NonFungible`, and `NonFungibleEdition`) will be displayed in the Collectibles tab. For more information on collectible best practices, please refer to:
 
-{% content-ref url="collectibles-nfts-and-semi-fungibles.md" %}
-[collectibles-nfts-and-semi-fungibles.md](collectibles-nfts-and-semi-fungibles)
-{% endcontent-ref %}
+[Collectibles (NFTs & Semi-Fungibles)](collectibles-nfts-and-semi-fungibles.md)
