--- a/deeplinks/methods/browse.mdx
+++ b/deeplinks/methods/browse.mdx
@@ -4,9 +4,9 @@ Deeplinks provide a convenient way for users to open web apps within Phantom. Us
 
 The `browse` deeplink can be used before a [Connect](/provider-methods/connect) event takes places, as it does not require a `session` param. Please review [Extension & Mobile Browser](broken-reference) for more information on how apps can interact with Phantom from within the in-app browser.
 
-{% hint style="info" %}
-`browse` deeplinks are not intended to be pasted into mobile web browsers. These deeplinks must either be handled by an app or clicked on by an end user.
-{% endhint %}
+> **ℹ️ Info**
+> 
+> `browse` deeplinks are not intended to be pasted into mobile web browsers. These deeplinks must either be handled by an app or clicked on by an end user.
 
 ### URL Structure
 
