--- a/deeplinks/methods/sign-message.mdx
+++ b/deeplinks/methods/sign-message.mdx
@@ -9,9 +9,9 @@ In order to send a message for the user to sign, an application must:&#x20;
 
 The [deeplinking demo app](/../resources/sandbox.md#deeplinking-demo-app) provides an example of signing a message.
 
-{% hint style="info" %}
-For more information on how to verify the signature of a message, please refer to [Encryption Resources](/encryption.md#encryption-resources).
-{% endhint %}
+> **ℹ️ Info**
+> 
+> For more information on how to verify the signature of a message, please refer to [Encryption Resources](/encryption.md#encryption-resources).
 
 ### Base URL
 
