--- a/integrations/web3-onboard.mdx
+++ b/integrations/web3-onboard.mdx
@@ -130,7 +130,9 @@ If you save your project you should now have working connect button that display
 
 Here's what it will look like:
 
-<img src="../../.gitbook/assets/Screen Shot 2023-03-10 at 1.23.44 PM.png" alt="" data-size="original">![](<../../.gitbook/assets/Screen Shot 2023-03-10 at 1.23.46 PM.png>)
+<img src="../../.gitbook/assets/Screen Shot 2023-03-10 at 1.23.44 PM.png" alt="" data-size="original" />
+
+![](<../../.gitbook/assets/Screen Shot 2023-03-10 at 1.23.46 PM.png>)
 
 ### Conclusion
 
