--- a/resources/faq.mdx
+++ b/resources/faq.mdx
@@ -10,17 +10,13 @@ Phantom will also not inject its provider into any [iframe](https://developer.mo
 
 Phantom supports the [Token Metadata Standard](https://docs.metaplex.com/programs/token-metadata/overview) established by [Metaplex](https://www.metaplex.com/). When displaying tokens, Phantom will first [categorize](/best-practices/tokens/#categorizing-tokens) them according to their [TokenStandard](https://docs.metaplex.com/programs/token-metadata/token-standard). If a token is considered `Fungible`, Phantom will display it on the [Home tab](/best-practices/tokens/home-tab-fungibles). Otherwise, Phantom will display it as a [Collectible](/best-practices/tokens/collectibles-nfts-and-semi-fungibles). For more information, please review:
 
-{% content-ref url="../best-practices/tokens/" %}
-[tokens](/best-practices/tokens/)
-{% endcontent-ref %}
+[Displaying Tokens](/best-practices/tokens/)
 
 ## What types of NFTs are supported?
 
 Phantom supports a range of NFT media types including images, audio files, video files, and 3D models. At this time, Phantom does not support HTML files. For a full list of the types of NFTs that Phantom will display, please reference:
 
-{% content-ref url="../best-practices/tokens/supported-media-types.md" %}
-[supported-media-types.md](/best-practices/tokens/supported-media-types)
-{% endcontent-ref %}
+[Supported Media Types](/best-practices/tokens/supported-media-types)
 
 ## Are hardware wallets supported?
 
