--- a/solana/establishing-connection.mdx
+++ b/solana/establishing-connection.mdx
@@ -75,7 +75,7 @@ provider.connect({ onlyIfTrusted: true });
 {% tab title="request()" %}
 
 ```javascript
-window.solana.request({ method: "connect", params: { onlyIfTrusted: true }});
+provider.request({ method: "connect", params: { onlyIfTrusted: true }});
 ```
 
 {% endtab %}
