--- a/solana/getting-started.mdx
+++ b/solana/getting-started.mdx
@@ -1,5 +1,6 @@
 ---
-## description: Start developing with Phantom Extension & In-app Browser
+description: Start developing with Phantom Extension & In-app Browser
+---
 
 # Getting Started With Solana
 
