--- a/tools/priority-fees.mdx
+++ b/tools/priority-fees.mdx
@@ -29,13 +29,13 @@ This means that the more compute units a transaction requests, the more addition
 Priority fees are calculated as,
 
 $$
-priority\_fees\ =\ compute\_budget\ \*\ compute\_unit\_price
+priority\_fees = compute\_budget \times compute\_unit\_price
 $$
 
 where,
 
 $$
-compute\_budget\ =\ #\ of\ instructions\ \*\ compute\_unit\_limit
+compute\_budget = number\_of\_instructions \times compute\_unit\_limit
 $$
 
 ### How Phantom Applies Priority Fees to dApp Transactions
