--- a/best-practices/activity-tab.mdx
+++ b/best-practices/activity-tab.mdx
@@ -2,11 +2,11 @@
 
 When a user views their historical activity, Phantom will parse their dApp interactions and enrich them with known metadata. The following are two examples of how Phantom displays historical transactions on Magic Eden and Jupiter, respectively:
 
-<figure><img src="../.gitbook/assets/Screenshot 2023-03-06 at 5.52.40 PM.png" alt=""><figcaption></figcaption></figure>
+<figure><img src="../.gitbook/assets/Screenshot 2023-03-06 at 5.52.40 PM.png" alt="" /><figcaption></figcaption></figure>
 
-<figure><img src="../.gitbook/assets/Screenshot 2023-03-06 at 5.51.57 PM (1).png" alt=""><figcaption></figcaption></figure>
+<figure><img src="../.gitbook/assets/Screenshot 2023-03-06 at 5.51.57 PM (1).png" alt="" /><figcaption></figcaption></figure>
 
-To enable this, DApp developers can send an email to <developers@phantom.app> with the following information:
+To enable this, DApp developers can send an email to [developers@phantom.app](mailto:developers@phantom.app) with the following information:
 
 1. URL of the Website
 2. Display name of the dApp
