--- a/resources/assets.mdx
+++ b/resources/assets.mdx
@@ -1,3 +1,3 @@
 # Logos & Assets
 
-A variety of Phantom logos and assets for your integration can be found here: <https://phantom.app/logos.zip>
+A variety of Phantom logos and assets for your integration can be found here: [https://phantom.app/logos.zip](https://phantom.app/logos.zip)
