--- a/resources/demo-apps.mdx
+++ b/resources/demo-apps.mdx
@@ -4,7 +4,7 @@
 
 For a live example of how a multichain dApp can integrate with Phantom, check out our Multichain Sandbox on [CodeSandbox](https://472igc.csb.app/) and [GitHub](https://github.com/phantom-labs/multi-chain-sandbox).
 
-<figure><img src="../.gitbook/assets/Screen Shot 2023-03-09 at 4.55.22 PM.png" alt=""><figcaption><p>The Phantom Multichain Sandbox</p></figcaption></figure>
+<figure><img src="../.gitbook/assets/Screen Shot 2023-03-09 at 4.55.22 PM.png" alt="" /><figcaption><p>The Phantom Multichain Sandbox</p></figcaption></figure>
 
 ### Solana-only Sandbox
 
@@ -14,6 +14,6 @@ For a live example of a Solana-only integration, check out our Solana Sandbox on
 
 ### Deeplinking Demo App
 
-For a live demonstration of Phantom's deeplinking API, please review our React Native demo app on [GitHub](https://github.com/phantom-labs/deep-link-demo-app). This application can be run locally and interacted with on iOS and Android devices via [Expo CLI](https://docs.expo.dev/workflow/expo-cli/).&#x20;
+For a live demonstration of Phantom's deeplinking API, please review our React Native demo app on [GitHub](https://github.com/phantom-labs/deep-link-demo-app). This application can be run locally and interacted with on iOS and Android devices via [Expo CLI](https://docs.expo.dev/workflow/expo-cli/).
 
 ![A connect request to Magic Eden, initiated via a deeplink](/.gitbook/assets/cover_deeplinking_me-minified.png)
