--- a/solana/signing-message.mdx
+++ b/solana/signing-message.mdx
@@ -9,12 +9,11 @@ In order to send a message for the user to sign, a web application must:&#x20;
 
 The [`handleSignMessage` section of our developer sandbox](https://github.com/phantom-labs/sandbox/blob/b57fdd0e65ce4f01290141a01e33d17fd2f539b9/src/App.tsx#L242) provides an example of signing a message.
 
-{% hint style="info" %}
-For more information on how to verify the signature of a message, please refer to [tweetnacl-js](https://github.com/dchest/tweetnacl-js/blob/master/README.md#naclsigndetachedverifymessage-signature-publickey).
-{% endhint %}
+> **ℹ️ Info**
+> 
+> For more information on how to verify the signature of a message, please refer to [tweetnacl-js](https://github.com/dchest/tweetnacl-js/blob/master/README.md#naclsigndetachedverifymessage-signature-publickey).
 
-{% tabs %}
-{% tab title="signMessage()" %}
+**Using signMessage():**
 
 ```javascript
 const provider = getProvider(); // see "Detecting the Provider"
@@ -23,24 +22,20 @@ const encodedMessage = new TextEncoder().encode(message);
 const signedMessage = await provider.signMessage(encodedMessage, "utf8");
 ```
 
-{% endtab %}
+**Using request():**
 
-{% tab title="request()" %}
-
-<pre class="language-javascript"><code class="lang-javascript">const provider = getProvider(); // see "Detecting the Provider"
+```javascript
+const provider = getProvider(); // see "Detecting the Provider"
 const message = `To avoid digital dognappers, sign below to authenticate with CryptoCorgis`;
 const encodedMessage = new TextEncoder().encode(message);
-<strong>const signedMessage = await provider.request({
-</strong>    method: "signMessage",
+const signedMessage = await provider.request({
+    method: "signMessage",
     params: {
          message: encodedMessage,
          display: "hex",
     },
 });
-</code></pre>
-
-{% endtab %}
-{% endtabs %}
+```
 
 ## Support for "Sign In With" Standards
 
